<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alexandria</string>

    <!-- Menu Items -->
    <string name="books">List of Books</string>
    <string name="scan">Scan/Add a Book</string>
    <string name="about">About this App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="scan_button">Scan</string>
    <string name="input_hint">Insert ISBN-13. Digits only.</string>
    <string name="book_cover">Bookcover</string>

    <string name="ok_button">Next</string>
    <string name="cancel_button">Cancel</string>
    <string name="not_found">No Book found</string>
    <string name="search">Search</string>
    <string name="delete">Delete Book</string>
    <string name="pref_startScreen">Select Startscreen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_scan">Scan ISBN</string>
    <string name="action_share">Share</string>
    <string name="back_button">go back</string>
    <string name="share_text">A must read book: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_author_found">No author found</string>
    <string name="no_internet">Sorry there is no internet connection right now, an internet connection is needed for this action</string>
    <string name="add_or">Or</string>
</resources>
