<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="it.jaschke.alexandria.AddBook">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|top">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:id="@+id/eancontainer"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minEms="@integer/ean_width"
                android:id="@+id/ean"
                android:saveEnabled="true"
                android:maxLength="@integer/ean_size"
                android:maxLines="1"
                android:hint="@string/input_hint"
                android:paddingRight="20dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Add"
                    android:id="@+id/buttonAdd"
                    android:layout_alignTop="@+id/scan_button"
                    android:layout_alignLeft="@+id/eancontainer"
                    android:layout_alignStart="@+id/eancontainer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_or"
                    android:id="@+id/textView"
                    android:layout_gravity="center_vertical"
                    android:layout_alignBaseline="@+id/scan_button"
                    android:layout_alignBottom="@+id/scan_button"
                    android:layout_centerHorizontal="true" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_button"
                    android:id="@+id/scan_button"
                    android:layout_gravity="center_horizontal"
                    android:layout_below="@+id/eancontainer"
                    android:layout_toRightOf="@+id/textView"
                    android:layout_toEndOf="@+id/textView" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:id="@+id/bookInfoContainer"
            tools:visibility="visible"
            android:visibility="invisible"
            android:layout_below="@+id/eancontainer"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bookTitle"
                android:textSize="@dimen/head_line"
                android:textIsSelectable="true"
                android:textStyle="bold"
                android:paddingRight="20dp"
                tools:text="Title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bookSubTitle"
                android:layout_marginTop="5dp"
                android:maxLines="3"
                android:ellipsize="end"
                android:layout_alignLeft="@+id/eancontainer"
                tools:text="Book subtitle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/authors"
                android:textSize="@dimen/small_fontsize"
                android:layout_marginTop="-15dp"
                tools:text="author"
                android:layout_gravity="right"
                android:layout_marginRight="5dp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/bookCover"
                android:contentDescription="@string/book_cover"
                tools:src="@drawable/ic_launcher"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/categories"
                android:textSize="@dimen/small_fontsize"
                android:layout_marginTop="20dp"
                tools:text="categories" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_below="@+id/bookInfoContainer"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:layout_marginTop="10dp">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="fill_parent"
                    android:text="@string/cancel_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/delete_button"
                    android:drawableLeft="@drawable/ic_action_discard"
                    android:layout_marginRight="20dp" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="fill_parent"
                    android:text="@string/ok_button"
                    android:id="@+id/save_button"
                    android:drawableLeft="@drawable/ic_action_accept"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_gravity="bottom" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</FrameLayout>
